# lab6

./: CMakeLists.txt  problem1.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5.cpp  problem6.cpp
